--- a/crawl-ref/source/webserver/game_data/static/style.css
+++ b/crawl-ref/source/webserver/game_data/static/style.css
@@ -353,6 +353,15 @@ body {
 .simplebar-track {
     background: #040204;
 }
+.simplebar-track.vertical::before {
+	position: absolute;
+	top: 0;
+	left: 4px;
+	right: 5px;
+	bottom: 0;
+	background: #292929;
+	content: ' ';
+}
 .simplebar-track .simplebar-scrollbar::before,
 .simplebar-track.horizontal {
     display: none;
