Various small tweaks
 * improve code style (at least relative to our guidelines), comments
 * handle no auth smtp configurations
 * small tweaks to wording, logging

(cherry picked from commit 68a31cccb1466c02af787c62b131146fbb0c42be)

--- a/crawl-ref/source/webserver/templates/client.html
+++ b/crawl-ref/source/webserver/templates/client.html
@@ -93,7 +93,7 @@
           <label for="reset_pw_password">Password:</label>
           <input class="text" type="password" name="reset_pw_password" id="reset_pw_password">
           <br>
-          <label for="reset_pw_repeat_password">Password:</label>
+          <label for="reset_pw_repeat_password">Repeat password:</label>
           <input class="text" type="password" name="reset_pw_repeat_password" id="reset_pw_repeat_password">
           <br>
           <input class="button" type="button" name="cancel" id="reset_pw_cancel" value="Cancel">
