--- a/crawl-ref/source/webserver/templates/client.html
+++ b/crawl-ref/source/webserver/templates/client.html
@@ -27,7 +27,7 @@
           <label for="remember_me">Stay logged in</label>
           <span class="extra_links">|
           <a id="reg_link" href="javascript:">Register</a>
-{% if config.allow_password_reset %}
+{% if getattr(config, "allow_password_reset", False) %}
           <a id="forgot_link" href="javascript:">Forgot Password</a>
 {% end %}
           <a id="logout_link" href="javascript:" style="display: none;">Logout</a></span>
@@ -56,7 +56,7 @@
         </form>
       </div>
 
-{% if config.allow_password_reset %}
+{% if getattr(config, "allow_password_reset", False) %}
       <div id="forgot" class="floating_dialog" style="display: none;">
         <span id="forgot_message"></span>
         <form action="#" id="forgot_form">
@@ -75,7 +75,7 @@
       </div>
 {% end %}
 
-{% if config.allow_password_reset and reset_token %}
+{% if getattr(config, "allow_password_reset", False) and reset_token %}
       <div id="reset_pw" class="floating_dialog" style="display: none;">
   {% if reset_token_error %}
         <form action="#" id="reset_pw_form">
